refactor: toList를 통해 반환하도록 수정